--- a/cyber-audit-flask/requirements.txt
+++ b/cyber-audit-flask/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.1.2
-gunicorn==20.1.0
-google-cloud-aiplatform==1.11.0
-python-dotenv==0.19.2
+Flask
+Werkzeug
+google-cloud-aiplatform
+python-dotenv
+gunicorn
